5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4377/executions/1692_1880.log
== TEST (2019-04-26 20:26:52) 
-- CODE:
m=int(input("m"))

if(m==1):
	print("janeiro")
elif(m==2):
	print("fevereiro")


-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 18:41:19) 
-- CODE:
m=int(input("m"))

if(1<=m<=12)
elif(m==1):
	print("janeiro")
	elif(m==2):
	print("fevereiro")
	elif(m==3):
		print("marco")
		elif(m==4):
			print("abril")
			
else:
	print("numero do mes invalido")
			

-- EXECUTION TIME:
0.118234
-- ERROR:
  File "/home/codebench/codes/1692/1880/main.py", line 3
    if(1<=m<=12)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:41:20) 
-- CODE:
m=int(input("m"))

if(1<=m<=12)
elif(m==1):
	print("janeiro")
	elif(m==2):
	print("fevereiro")
	elif(m==3):
		print("marco")
		elif(m==4):
			print("abril")
			
else:
	print("numero do mes invalido")
			

-- ERROR:
File "XXXX", line 3
    if(1<=m<=12)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:41:57) 
-- CODE:
m=int(input("m"))

if(m>=1 and m<=12)
elif(m==1):
	print("janeiro")
	elif(m==2):
	print("fevereiro")
	elif(m==3):
		print("marco")
		elif(m==4):
			print("abril")
			
else:
	print("numero do mes invalido")
			

-- ERROR:
File "XXXX", line 3
    if(m>=1 and m<=12)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 18:48:06) 
-- CODE:
m=int(input("m"))

if(m>=1 and m<=12)
elif(m==1):
	print("janeiro")
	elif(m==2):
	print("fevereiro")
	elif(m==3):
		print("marco")
		elif(m==4):
			print("abril")
			
else:
	print("numero de mes invalido")
			

-- EXECUTION TIME:
0.188278
-- ERROR:
  File "/home/codebench/codes/1692/1880/main.py", line 3
    if(m>=1 and m<=12)
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 18:48:42) 
-- CODE:
m=int(input("m"))

if(m==1):
	print("janeiro")
	elif(m==2):
	print("fevereiro")
	elif(m==3):
		print("marco")
		elif(m==4):
			print("abril")
			
else:
	print("numero de mes invalido")
			

-- EXECUTION TIME:
0.227454
-- ERROR:
  File "/home/codebench/codes/1692/1880/main.py", line 5
    elif(m==2):
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:48:42) 
-- CODE:
m=int(input("m"))

if(m==1):
	print("janeiro")
	elif(m==2):
	print("fevereiro")
	elif(m==3):
		print("marco")
		elif(m==4):
			print("abril")
			
else:
	print("numero de mes invalido")
			

-- ERROR:
File "XXXX", line 5
    elif(m==2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:52:57) 
-- CODE:
m=int(input("m"))

if(m>=1 and m<=12)

elif(m==1):
	print("janeiro")
elif(m==2):
	print("fevereiro")
elif(m==3):
	print("marco")
elif(m==4):
	print("abril")
			
else:
	print("numero de mes invalido")
			

-- ERROR:
File "XXXX", line 3
    if(m>=1 and m<=12)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:53:24) 
-- CODE:
m=int(input("m"))

if(m>=1 and m<=12)
elif(m==1):
	print("janeiro")
elif(m==2):
	print("fevereiro")
elif(m==3):
	print("marco")
elif(m==4):
	print("abril")
			
else:
	print("numero de mes invalido")
			

-- ERROR:
File "XXXX", line 3
    if(m>=1 and m<=12)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 18:53:25) 
-- CODE:
m=int(input("m"))

if(m>=1 and m<=12)
elif(m==1):
	print("janeiro")
elif(m==2):
	print("fevereiro")
elif(m==3):
	print("marco")
elif(m==4):
	print("abril")
			
else:
	print("numero de mes invalido")
			

-- EXECUTION TIME:
0.128608
-- ERROR:
  File "/home/codebench/codes/1692/1880/main.py", line 3
    if(m>=1 and m<=12)
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 18:53:28) 
-- CODE:
m=int(input("m"))

if(m>=1 and m<=12)
elif(m==1):
	print("janeiro")
elif(m==2):
	print("fevereiro")
elif(m==3):
	print("marco")
elif(m==4):
	print("abril")
			
else:
	print("numero de mes invalido")
			

-- ERROR:
File "XXXX", line 3
    if(m>=1 and m<=12)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 13:05:54) 
-- CODE:
m=int(input("m"))

if(m>=1 and m<=12):
	if(m==1):
		print("janeiro")
		if(m==2):
			print("fevereiro")
			if(m==3):
				print("marco")
				if(m==4):
					print("abril")
					if(m==5):
						print("vai tomar no cu")
						if(m==6):
							print("junho")
							if(m==7):
								print("agosto")
								if(m==8):
									print("setembro")
									if(m==9):
										print("outubro")
										if(m==10):
											print("novembro")
											if(m==11):
												print("dezembro")
												if(m==12):
													print("cu")
else:
	print("numero do mes invalido")
													
													
								
							









else:
	print("numero de mes invalido")
			

-- ERROR:
File "XXXX", line 43
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 13:06:12) 
-- CODE:
m=int(input("m"))

if(m>=1 and m<=12):
	if(m==1):
		print("janeiro")
		if(m==2):
			print("fevereiro")
			if(m==3):
				print("marco")
				if(m==4):
					print("abril")
					if(m==5):
						print("vai tomar no cu")
						if(m==6):
							print("junho")
							if(m==7):
								print("agosto")
								if(m==8):
									print("setembro")
									if(m==9):
										print("outubro")
										if(m==10):
											print("novembro")
											if(m==11):
												print("dezembro")
												if(m==12):
													print("cu")
else:
	print("numero do mes invalido")
													
													
								
							










			

-- EXECUTION TIME:
0.154646
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:

-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:

-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero do mes invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 13:06:13) 
-- CODE:
m=int(input("m"))

if(m>=1 and m<=12):
	if(m==1):
		print("janeiro")
		if(m==2):
			print("fevereiro")
			if(m==3):
				print("marco")
				if(m==4):
					print("abril")
					if(m==5):
						print("vai tomar no cu")
						if(m==6):
							print("junho")
							if(m==7):
								print("agosto")
								if(m==8):
									print("setembro")
									if(m==9):
										print("outubro")
										if(m==10):
											print("novembro")
											if(m==11):
												print("dezembro")
												if(m==12):
													print("cu")
else:
	print("numero do mes invalido")
													
													
								
							










			

-- ERROR:
File "XXXX", line 43
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 13:06:43) 
-- CODE:
m=int(input("m"))

if(m>=1 and m<=12):
	if(m==1):
		print("janeiro")
		if(m==2):
			print("fevereiro")
			if(m==3):
				print("marco")
				if(m==4):
					print("abril")
					if(m==5):
						print("maio")
						if(m==6):
							print("junho")
							if(m==7):
								print("agosto")
								if(m==8):
									print("setembro")
									if(m==9):
										print("outubro")
										if(m==10):
											print("novembro")
											if(m==11):
												print("dezembro")
												if(m==12):
													print("cu")
else:
	print("numero do mes invalido")
													
													
								
							










			

-- ERROR:
File "XXXX", line 43
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 13:06:47) 
-- CODE:
m=int(input("m"))

if(m>=1 and m<=12):
	if(m==1):
		print("janeiro")
		if(m==2):
			print("fevereiro")
			if(m==3):
				print("marco")
				if(m==4):
					print("abril")
					if(m==5):
						print("maio")
						if(m==6):
							print("junho")
							if(m==7):
								print("agosto")
								if(m==8):
									print("setembro")
									if(m==9):
										print("outubro")
										if(m==10):
											print("novembro")
											if(m==11):
												print("dezembro")
												if(m==12):
													print("cu")
else:
	print("numero do mes invalido")
													
													
								
							










			

-- EXECUTION TIME:
0.23132
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:

-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:

-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero do mes invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 13:06:58) 
-- CODE:
m=int(input("m"))

if(m>=1 and m<=12):
	if(m==1):
		print("janeiro")
		if(m==2):
			print("fevereiro")
			if(m==3):
				print("marco")
				if(m==4):
					print("abril")
					if(m==5):
						print("maio")
						if(m==6):
							print("junho")
							if(m==7):
								print("agosto")
								if(m==8):
									print("setembro")
									if(m==9):
										print("outubro")
										if(m==10):
											print("novembro")
											if(m==11):
												print("dezembro")
												if(m==12):
													print("julho")
else:
	print("numero do mes invalido")
													
													
								
							










			

-- ERROR:
File "XXXX", line 43
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 13:06:59) 
-- CODE:
m=int(input("m"))

if(m>=1 and m<=12):
	if(m==1):
		print("janeiro")
		if(m==2):
			print("fevereiro")
			if(m==3):
				print("marco")
				if(m==4):
					print("abril")
					if(m==5):
						print("maio")
						if(m==6):
							print("junho")
							if(m==7):
								print("agosto")
								if(m==8):
									print("setembro")
									if(m==9):
										print("outubro")
										if(m==10):
											print("novembro")
											if(m==11):
												print("dezembro")
												if(m==12):
													print("julho")
else:
	print("numero do mes invalido")
													
													
								
							










			

-- ERROR:
File "XXXX", line 43
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 13:07:18) 
-- CODE:
m=int(input("m"))

if(m>=1 and m<=12):
	if(m==1):
		print("janeiro")
		if(m==2):
			print("fevereiro")
			if(m==3):
				print("marco")
				if(m==4):
					print("abril")
					if(m==5):
						print("maio")
						if(m==6):
							print("junho")
							if(m==7):
								print("agosto")
								if(m==8):
									print("setembro")
									if(m==9):
										print("outubro")
										if(m==10):
											print("novembro")
											if(m==11):
												print("dezembro")
												if(m==12):
													print("julho")
else:
	print("numero de mes invalido")
													
													
								
							










			

-- ERROR:
File "XXXX", line 43
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 13:08:10) 
-- CODE:
m=int(input("m"))

if(m>=1 and m<=12):
	if(m==1):
		print("janeiro")
		if(m==2):
			print("fevereiro")
			if(m==3):
				print("marco")
				if(m==4):
					print("abril")
					if(m==5):
						print("maio")
						if(m==6):
							print("junho")
							if(m==7):
								print("agosto")
								if(m==8):
									print("setembro")
									if(m==9):
										print("outubro")
										if(m==10):
											print("novembro")
											if(m==11):
												print("dezembro")
												if(m==12):
													print("julho")
else:
	print("numero de mes invalido")
													
													
								
							










			

-- ERROR:
File "XXXX", line 43
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 13:08:39) 
-- CODE:
m=int(input("m"))

if(m>=1 and m<=12):
	if(m==1):
		print("janeiro")
		if(m==2):
			print("fevereiro")
			if(m==3):
				print("marco")
				if(m==4):
					print("abril")
					if(m==5):
						print("maio")
						if(m==6):
							print("junho")
							if(m==7):
								print("agosto")
								if(m==8):
									print("setembro")
									if(m==9):
										print("outubro")
										if(m==10):
											print("novembro")
											if(m==11):
												print("dezembro")
												if(m==12):
													print("julho")
else:
	print("numero de mes invalido")
													
													
								
							










			

-- EXECUTION TIME:
0.210751
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:

-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:

-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero de mes invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 13:08:40) 
-- CODE:
m=int(input("m"))

if(m>=1 and m<=12):
	if(m==1):
		print("janeiro")
		if(m==2):
			print("fevereiro")
			if(m==3):
				print("marco")
				if(m==4):
					print("abril")
					if(m==5):
						print("maio")
						if(m==6):
							print("junho")
							if(m==7):
								print("agosto")
								if(m==8):
									print("setembro")
									if(m==9):
										print("outubro")
										if(m==10):
											print("novembro")
											if(m==11):
												print("dezembro")
												if(m==12):
													print("julho")
else:
	print("numero de mes invalido")
													
													
								
							










			

-- ERROR:
File "XXXX", line 43
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 13:08:54) 
-- CODE:
m=int(input("m"))

if(m>=1 and m<=12):
	if(m==1):
		print("janeiro")
		if(m==2):
			print("fevereiro")
			if(m==3):
				print("marco")
				if(m==4):
					print("abril")
					if(m==5):
						print("maio")
						if(m==6):
							print("junho")
							if(m==7):
								print("agosto")
								if(m==8):
									print("setembro")
									if(m==9):
										print("outubro")
										if(m==10):
											print("novembro")
											if(m==11):
												print("dezembro")
												if(m==12):
													print("julho")
else:
	print("numero de mes invalido")
													
													
								
							










			

-- ERROR:
File "XXXX", line 43
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 13:08:54) 
-- CODE:
m=int(input("m"))

if(m>=1 and m<=12):
	if(m==1):
		print("janeiro")
		if(m==2):
			print("fevereiro")
			if(m==3):
				print("marco")
				if(m==4):
					print("abril")
					if(m==5):
						print("maio")
						if(m==6):
							print("junho")
							if(m==7):
								print("agosto")
								if(m==8):
									print("setembro")
									if(m==9):
										print("outubro")
										if(m==10):
											print("novembro")
											if(m==11):
												print("dezembro")
												if(m==12):
													print("julho")
else:
	print("numero de mes invalido")
													
													
								
							










			

-- ERROR:
File "XXXX", line 43
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 13:09:24) 
-- CODE:
m=int(input("m"))

if(m>=1 and m<=12):
	if(m==1):
		print("janeiro")
		if(m==2):
			print("fevereiro")
			if(m==3):
				print("marco")
				if(m==4):
					print("abril")
					if(m==5):
						print("maio")
						if(m==6):
							print("junho")
							if(m==7):
								print("agosto")
								if(m==8):
									print("setembro")
									if(m==9):
										print("outubro")
										if(m==10):
											print("novembro")
											if(m==11):
												print("dezembro")
												if(m==12):
													print("julho")
else:
	print("numero de mes invalido")
													
													
								
							










			

-- ERROR:
File "XXXX", line 43
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 13:09:42) 
-- CODE:
m=int(input("m"))

if(m>=1 and m<=12):
	if(m==1):
		print("janeiro")
		if(m==2):
			print("fevereiro")
			if(m==3):
				print("marco")
				if(m==4):
					print("abril")
					if(m==5):
						print("maio")
						if(m==6):
							print("junho")
							if(m==7):
								print("agosto")
								if(m==8):
									print("setembro")
									if(m==9):
										print("outubro")
										if(m==10):
											print("novembro")
											if(m==11):
												print("dezembro")
												if(m==12):
													print("julho")
else:
	print("numero de mes invalido")
													
													
								
							










			

-- ERROR:
File "XXXX", line 43
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 13:10:05) 
-- CODE:
m=int(input("m"))

if(m>=1 and m<=12):
	if(m==1):
		print("janeiro")
		if(m==2):
			print("fevereiro")
			if(m==3):
				print("marco")
				if(m==4):
					print("abril")
					if(m==5):
						print("maio")
						if(m==6):
							print("junho")
							if(m==7):
								print("agosto")
								if(m==8):
									print("setembro")
									if(m==9):
										print("outubro")
										if(m==10):
											print("novembro")
											if(m==11):
												print("dezembro")
												if(m==12):
													print("julho")
else:
	print("numero de mes invalido")
													
													
								
							










			

-- ERROR:
File "XXXX", line 43
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 13:10:08) 
-- CODE:
m=int(input("m"))

if(m>=1 and m<=12):
	if(m==1):
		print("janeiro")
		if(m==2):
			print("fevereiro")
			if(m==3):
				print("marco")
				if(m==4):
					print("abril")
					if(m==5):
						print("maio")
						if(m==6):
							print("junho")
							if(m==7):
								print("agosto")
								if(m==8):
									print("setembro")
									if(m==9):
										print("outubro")
										if(m==10):
											print("novembro")
											if(m==11):
												print("dezembro")
												if(m==12):
													print("julho")
else:
	print("numero de mes invalido")
													
													
								
							










			

-- ERROR:
File "XXXX", line 43
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 13:13:18) 
-- CODE:
m=int(input("m"))

if(m>=1 and m<=12):
	if(m==1):
		print("janeiro")
elif(m==2):
	print("fevereiro")
elif(m==3):
	print("marco")
elif(m==4):
	print("abril")
elif(m==5):
	print("maio")
elif(m==6):
	print("junho")
elif(m==7):
	print("agosto")
elif(m==8):
	print("setembro")
eleif(m==9):
	print("outubro")
elif(m==10):
	print("novembro")
elif(m==11):
	print("dezembro")
elif(m==12)
   print("julho")
else:
	print("numero de mes invalido")
													
													
								
							










			

-- ERROR:
File "XXXX", line 20
    eleif(m==9):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 13:13:33) 
-- CODE:
m=int(input("m"))

if(m>=1 and m<=12):
	if(m==1):
		print("janeiro")
elif(m==2):
	print("fevereiro")
elif(m==3):
	print("marco")
elif(m==4):
	print("abril")
elif(m==5):
	print("maio")
elif(m==6):
	print("junho")
elif(m==7):
	print("agosto")
elif(m==8):
	print("setembro")
elif(m==9):
	print("outubro")
elif(m==10):
	print("novembro")
elif(m==11):
	print("dezembro")
elif(m==12)
   print("julho")
else:
	print("numero de mes invalido")
													
													
								
							










			

-- ERROR:
File "XXXX", line 26
    elif(m==12)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 13:13:35) 
-- CODE:
m=int(input("m"))

if(m>=1 and m<=12):
	if(m==1):
		print("janeiro")
elif(m==2):
	print("fevereiro")
elif(m==3):
	print("marco")
elif(m==4):
	print("abril")
elif(m==5):
	print("maio")
elif(m==6):
	print("junho")
elif(m==7):
	print("agosto")
elif(m==8):
	print("setembro")
elif(m==9):
	print("outubro")
elif(m==10):
	print("novembro")
elif(m==11):
	print("dezembro")
elif(m==12)
   print("julho")
else:
	print("numero de mes invalido")
													
													
								
							










			

-- ERROR:
File "XXXX", line 26
    elif(m==12)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 13:13:36) 
-- CODE:
m=int(input("m"))

if(m>=1 and m<=12):
	if(m==1):
		print("janeiro")
elif(m==2):
	print("fevereiro")
elif(m==3):
	print("marco")
elif(m==4):
	print("abril")
elif(m==5):
	print("maio")
elif(m==6):
	print("junho")
elif(m==7):
	print("agosto")
elif(m==8):
	print("setembro")
elif(m==9):
	print("outubro")
elif(m==10):
	print("novembro")
elif(m==11):
	print("dezembro")
elif(m==12)
   print("julho")
else:
	print("numero de mes invalido")
													
													
								
							










			

-- ERROR:
File "XXXX", line 26
    elif(m==12)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 13:13:49) 
-- CODE:
m=int(input("m"))

if(m>=1 and m<=12):
	if(m==1):
		print("janeiro")
elif(m==2):
	print("fevereiro")
elif(m==3):
	print("marco")
elif(m==4):
	print("abril")
elif(m==5):
	print("maio")
elif(m==6):
	print("junho")
elif(m==7):
	print("agosto")
elif(m==8):
	print("setembro")
elif(m==9):
	print("outubro")
elif(m==10):
	print("novembro")
elif(m==11):
	print("dezembro")
elif(m==12):
   print("julho")
else:
	print("numero de mes invalido")
													
													
								
							










			

-- ERROR:
File "XXXX", line 26
    elif(m==12)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 13:14:20) 
-- CODE:
m=int(input("m"))


elif(m==1):
		print("janeiro")
elif(m==2):
	print("fevereiro")
elif(m==3):
	print("marco")
elif(m==4):
	print("abril")
elif(m==5):
	print("maio")
elif(m==6):
	print("junho")
elif(m==7):
	print("agosto")
elif(m==8):
	print("setembro")
elif(m==9):
	print("outubro")
elif(m==10):
	print("novembro")
elif(m==11):
	print("dezembro")
elif(m==12):
   print("julho")
else:
	print("numero de mes invalido")
													
													
								
							










			

-- ERROR:
File "XXXX", line 4
    elif(m==1):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 13:14:28) 
-- CODE:
m=int(input("m"))


if(m==1):
		print("janeiro")
elif(m==2):
	print("fevereiro")
elif(m==3):
	print("marco")
elif(m==4):
	print("abril")
elif(m==5):
	print("maio")
elif(m==6):
	print("junho")
elif(m==7):
	print("agosto")
elif(m==8):
	print("setembro")
elif(m==9):
	print("outubro")
elif(m==10):
	print("novembro")
elif(m==11):
	print("dezembro")
elif(m==12):
   print("julho")
else:
	print("numero de mes invalido")
													
													
								
							










			

-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 13:14:36) 
-- CODE:
m=int(input("m"))


if(m==1):
		print("janeiro")
elif(m==2):
	print("fevereiro")
elif(m==3):
	print("marco")
elif(m==4):
	print("abril")
elif(m==5):
	print("maio")
elif(m==6):
	print("junho")
elif(m==7):
	print("agosto")
elif(m==8):
	print("setembro")
elif(m==9):
	print("outubro")
elif(m==10):
	print("novembro")
elif(m==11):
	print("dezembro")
elif(m==12):
   print("julho")
else:
	print("numero de mes invalido")
													
													
								
							










			

-- EXECUTION TIME:
0.138686
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero de mes invalido
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
